[TBCM-208] fixing horizontal scroller on matrix screen

--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -155,7 +155,6 @@ thead th {
   background: #fff;
 }
 .activity-gap-table {
-  float: left;
   overflow: auto;
 }
 .firstTDinsideRow {
